Add revision comments

--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,7 @@
+<!--
+ // todo rev: RV-C1 16.03.2019 09:04
+ // todo Andrey: is this component complete? ^^
+-->
 <p>
   page-not-found works!
 </p>
