--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,7 +1,9 @@
-<!--
- // todo rev: RV-C1 16.03.2019 09:04
- // todo Andrey: is this component complete? ^^
--->
-<p>
-  page-not-found works!
-</p>
+<div class="text-center mt-5">
+  <h1 class="pt-5 mb-4">
+    Sorry, <br> your page not found <br> or something gone wrong!
+  </h1>
+
+  <a [routerLink]="['/']"
+     title="Go to home page">Go to home page</a>
+</div>
+
